# snippets

./: README.md  moo.sh  startup.sh
blog/: README
scripts/: apple_journal.py  startup.sh
site-block/: README.md  block.py  pyproject.toml  unblock.py
site-block/src/site_block/: __init__.py
